test/corpus/multiple_rows.txt
=============
Multiple Rows
=============
1 | 2 | 3
4 | 5 | 6
7 | 8 | 9

---
(table
    (row
        (cell (integer))
        (cell (integer))
        (cell (integer))
    )
    (row
        (cell (integer))
        (cell (integer))
        (cell (integer))
    )
    (row
        (cell (integer))
        (cell (integer))
        (cell (integer))
    )
)

===================================
Multi-Row Trailing Column Separator
===================================
1 | 2
1 |

---
(table
    (row
        (cell (integer))
        (cell (integer))
    )
    (row
        (cell (integer))
    )
)
